--- a/ORCID DB/RestSandbox/RestSandbox.csproj
+++ b/ORCID DB/RestSandbox/RestSandbox.csproj
@@ -199,6 +199,7 @@
     <Compile Include="ParseHubExtractor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RDFGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
