--- a/ORCID DB/RestSandbox/packages.config
+++ b/ORCID DB/RestSandbox/packages.config
@@ -6,6 +6,7 @@
   <package id="DynamicLanguageRuntime" version="1.2.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net472" />
   <package id="IronPython" version="2.7.9" targetFramework="net472" />
+  <package id="Json.Net" version="1.0.33" targetFramework="net472" />
   <package id="Knuppe.SharpNL" version="1.3.0" targetFramework="net472" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net472" />
