algorithm fills 72% of entries for faculty

--- a/ORCID DB/RestSandbox/packages.config
+++ b/ORCID DB/RestSandbox/packages.config
@@ -4,6 +4,7 @@
   <package id="dotNetRDF" version="2.7.2" targetFramework="net472" />
   <package id="dotNetRDF.Query.FullText" version="2.7.2" targetFramework="net472" />
   <package id="DynamicLanguageRuntime" version="1.2.2" targetFramework="net472" />
+  <package id="Fastenshtein" version="1.0.0.7" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net472" />
   <package id="IronPython" version="2.7.9" targetFramework="net472" />
   <package id="Json.Net" version="1.0.33" targetFramework="net472" />
