--- a/ORCID DB/RestSandbox/RestSandbox.csproj
+++ b/ORCID DB/RestSandbox/RestSandbox.csproj
@@ -45,6 +45,9 @@
     <Reference Include="dotNetRDF.Query.FullText, Version=2.7.2.0, Culture=neutral, PublicKeyToken=6055ffe4c97cc780, processorArchitecture=MSIL">
       <HintPath>..\packages\dotNetRDF.Query.FullText.2.7.2\lib\net40\dotNetRDF.Query.FullText.dll</HintPath>
     </Reference>
+    <Reference Include="Fastenshtein, Version=1.0.0.7, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Fastenshtein.1.0.0.7\lib\net452\Fastenshtein.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.11.34.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.11.34\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
